--- a/Precamp intro web programming/lab2.css
+++ b/Precamp intro web programming/lab2.css
@@ -21,3 +21,17 @@ border-bottom: 1px dotted black;
       visibility: visible;
   }
   
+ul {
+    list-style-type: none;
+}
+
+li {
+    display: inline-block;
+}
+
+a {
+    background-color: cornflowerblue;
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+}
