--- a/Precamp intro web programming/lab2.css
+++ b/Precamp intro web programming/lab2.css
@@ -35,3 +35,37 @@ a {
     border-radius: 5px;
     text-decoration: none;
 }
+
+.dd {
+    position: relative;
+    display: inline-block;
+}
+
+.db {
+  background-color: olivedrab;
+  color: white;
+  padding: 20px;
+  font-size: 18px;
+  border: none;
+  border-radius: 15px;
+}
+
+.dc { display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;}
+
+.dc a{
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+      }
+
+.dc a:hover {background-color: lightgreen}
+
+.dd:hover .dc {
+     display: block;
+      }
