--- a/Codecamp6_main/HTML/Homework_2/booking.css
+++ b/Codecamp6_main/HTML/Homework_2/booking.css
@@ -1,13 +1,25 @@
+@font-face{
+    font-family: oxygen;
+    src: url(Codecamp6_main\HTML\Homework_2\Oxygen\Oxygen-Bold.ttf);
+}
+
 .main{
     position: absolute;
-    top: 150px;
-    left: 100px;
-    right: 100px;
+    top: 200px;
+    left: 750px;
+    right: 800px;
     bottom: 200px;
+    font-family: oxygen;
 }
 
 .box1{
     display: grid;
     grid-template-columns: auto auto;
+    grid-gap: 10px;
+}
+
+.box2{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
     grid-gap: 10px;
 }
